--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.1",
+    "@angular/animations": "^10.0.2",
     "@angular/cdk": "^10.0.1",
-    "@angular/common": "^10.0.1",
-    "@angular/compiler": "^10.0.1",
-    "@angular/core": "^10.0.1",
-    "@angular/forms": "^10.0.1",
+    "@angular/common": "^10.0.2",
+    "@angular/compiler": "^10.0.2",
+    "@angular/core": "^10.0.2",
+    "@angular/forms": "^10.0.2",
     "@angular/material": "^10.0.1",
-    "@angular/platform-browser": "^10.0.1",
-    "@angular/platform-browser-dynamic": "^10.0.1",
-    "@angular/router": "^10.0.1",
+    "@angular/platform-browser": "^10.0.2",
+    "@angular/platform-browser-dynamic": "^10.0.2",
+    "@angular/router": "^10.0.2",
     "bootstrap": "^4.5.0",
-    "jquery": "1.9.1 - 3",
-    "popper.js": "^1.16.0",
-    "rxjs": "^6.5.5",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
+    "rxjs": "^6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "^0.10.3"
   },
